# paeio

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml  requirements.test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: CI.yml  publish.yml
paeio/: io.py  parallelism.py  path.py  versioned.py
paeio/data_cleaning/: dates_holidays.py  feature_engineering.py  file_reading.py  path.py  utils.py
paeio/io/: io.py  keyvault.py
src/data_cleaning/: feature_engineering.py  file_reading.py  parallelism.py
