[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paeio"
version = "0.0.2.0"
authors = [
  { name="João Pedro Alves", email="jotapedro1997@gmail.com" },
]
description = "Utilities library for read/write operations and general data cleaning routines"
readme = "README.md"
requires-python = ">=3.7.1"
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/jotap123/paeio/tree/develop"
Issues = "https://github.com/jotap123/paeio/issues"
Linkedin_JP = "https://www.linkedin.com/in/jp111/"

[tool.isort]
profile = "black"